--- a/BlazorApp3/MauiApp2/Pages/Contact.razor
+++ b/BlazorApp3/MauiApp2/Pages/Contact.razor
@@ -39,31 +39,35 @@
       <div class="right-side">
         <div class="topic-text">Send us a message</div>
         <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
-      <form action="#">
+      <EditForm Model="@feedbackMessageModel" OnValidSubmit="SendFeedbackMessage">
+								<DataAnnotationsValidator />
+								<ValidationSummary />
+        
         <div class="input-box">
-          <input type="text" placeholder="Enter your name">
+          <input type="text" placeholder="Enter your name" @bind=@feedbackMessageModel.Name>
         </div>
         <div class="input-box">
-          <input type="text" placeholder="Enter your email">
+          <input type="text" placeholder="Enter your email" @bind=@feedbackMessageModel.Email>
         </div>
         <div class="input-box message-box">
-          <textarea placeholder="Enter your message"></textarea>
+          <textarea placeholder="Enter your message" @bind=@feedbackMessageModel.Message />
         </div>
         <div class="button">
-          <input type="button" value="Send Now" >
+          <input type="submit" value="Send Now" >
         </div>
-      </form>
+        <div>@content</div>
+      
+      </EditForm>
     </div>
     </div>
   </div>
 
 </body>
-@*
 @code{
-private int currentCount;
-        private async Task IncrementCount()
-        {
-            currentCount++;
-
-        }
-}*@
+    private FeedbackMessageModel feedbackMessageModel = new();
+    private string content = "";
+    protected async Task SendFeedbackMessage()
+    {
+       content= await (await _httpClient.PostAsJsonAsync("user/feedback", feedbackMessageModel)).Content.ReadAsStringAsync();
+    }
+}
